8217400: Optimized build is broken by Shenandoah changes

Reviewed-by: shade